--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@pixi/particle-emitter": "^5.0.3",
 		"pixi.js": "^6.2.1"
 	},
 	"devDependencies": {
