--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"@pixi/particle-emitter": "^5.0.3",
+		"core-js": "^3.20.3",
 		"pixi.js": "^6.2.1"
 	},
 	"devDependencies": {
