--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"start": "webpack-dev-server --config webpack.dev.js",
 		"clean": "rimraf dist",
 		"prebuild": "npm run clean",
-		"build": "webpack --config webpack.prod.js"
+		"build": "webpack --config webpack.prod.js && cp -R src/data dist"
 	},
 	"keywords": [],
 	"author": "",
